# starplat-mlir

./: .gitignore  Anchor.cpp  CMakeLists.txt  README.md  StarPlatGrammar  coconutpng.cpp  compile.sh  errors.txt  main.cc  run.sh  todo.md
ast/: ast.cpp  ast.h  visitor.h
avialDialect/include/: AvialDialect.h  AvialOps.h  AvialTypes.h
avialDialect/lib/: AvialDialect.cc
avialDialect/tblgen/: Avial.td  AvialDialect.td  CMakeLists.txt
codegen/: astdump.cpp  astdump.h  codegen.h  mlirgen.h  starplatIR.cpp  starplatIR.h
parser/: CMakeLists.txt  avial.l  avial.tab.cc  avial.y  lex.yy.cc
starplatDialect/: CMakeLists.txt  Starplat.td
starplatDialect/includes/: StarPlatDialect.h  StarPlatOps.h  StarPlatTypes.h
starplatDialect/libs/: StarPlatDialect.cc  StarPlatTransforms.cc
starplatDialect/lowerings/: starplat2llvm.h  starplat2llvmconversions.h  starplat2omp.h  startplat2omp.h  typeconverter.h
starplatDialect/tblgen/: CMakeLists.txt
starplatDialect/tblgen2/: CMakeLists.txt  Starplat.td
starplatDialect/transforms/: reachingDef.h  vertexToEdge.h
tests/: actual_tc.avl  assignmentOp.avl  assignmentmain.cc  attachNodeProp.avl  buildup.avl  declare.avl  fixedPointOp.avl  main.cc  output.ll  output.mlir  setNodeProp.avl  setNodemain.cc  sssp.avl  tc.avl  test.avl  test_program
tests/test_program.dSYM/Contents/Resources/DWARF/: test_program
tests/test_program.dSYM/Contents/Resources/Relocations/aarch64/: test_program.yml
